--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -504,10 +504,10 @@
 
           <div class="column is-4-widescreen is-6-desktop is-6-tablet">
             <div class="card-x">
-              <h3 class="card-x__title h3"><i class="fa fa-cogs" aria-hidden="true"></i> Headless</h3>
-              <p class="card-x__p"> Create flexible, multi-channel experiences with Magnolia's headless architecture and light development, perfect for seamless integration and rapid innovation.</p>
+              <h3 class="card-x__title h3"><i class="fa fa-cogs" aria-hidden="true"></i> Front-end developers</h3>
+              <p class="card-x__p">Build dynamic, content-rich sites with Magnolia's front-end tools. Use familiar web technologies, create custom templates, and jump in quickly with our getting started guide.</p>
               <div class="card-x__link-w">
-                <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/developing/headless/">Learn more</a>
+                <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/magnolia-front-end-development/">Learn more</a>
               </div>
             </div>
           </div>
@@ -515,7 +515,7 @@
           <div class="column is-4-widescreen is-6-desktop is-6-tablet">
             <div class="card-x">
               <h3 class="card-x__title h3"><i class="fa fa-pencil" aria-hidden="true"></i> Authors</h3>
-              <p class="card-x__p">Focus on using Magnolia by getting to know Admincentral. Get acquainted with editing pages, managing assets, and publishing your updates.</p>
+              <p class="card-x__p">Create and manage content easily with Magnolia's intuitive Admincentral. Plan, edit, organize assets, and publish across channels, all in one streamlined workspace.</p>
               <div class="card-x__link-w">
                 <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/authoring/">Learn more</a>
               </div>
